tests/ui/traits/next-solver/unevaluated-const-impl-trait-ref.fails.stderr
error[E0277]: the trait bound `(): Trait<const { 1 }>` is not satisfied
  --> $DIR/unevaluated-const-impl-trait-ref.rs:24:13
   |
LL |     needs::<1>();
   |             ^ the trait `Trait<const { 1 }>` is not implemented for `()`
   |
help: the following other types implement trait `Trait<const N>`
  --> $DIR/unevaluated-const-impl-trait-ref.rs:7:1
   |
LL | impl Trait<{ 1 - 1 }> for () {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `()` implements `Trait<const { 0 }>`
LL | impl Trait<{ 1 + 1 }> for () {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `()` implements `Trait<const { 2 }>`
note: required by a bound in `needs`
  --> $DIR/unevaluated-const-impl-trait-ref.rs:12:9
   |
LL | fn needs<const N: usize>()
   |    ----- required by a bound in this function
LL | where
LL |     (): Trait<N>,
   |         ^^^^^^^^ required by this bound in `needs`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
